--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div id="pattern">
+            <img src="img/logo.svg" alt="logo">
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
