start the main part

--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
     </header>
 
     <main>
+        <div id="title">
+            <h1>Internet deve essere al servizio del "Bene Pubblico": il manifesto di Tim-Berners Lee</h1>
+            <p>Scritto da <span>The Booleaners</span></p>
+            il <time>10/10/2022</time>
+        </div>
+
+        <figure>
+            <img src="img/tim-1.jpg" alt="Tim-Berners Lee">
+            <img src="img/tim-2.jpg" alt="Tim-Berners Lee">
+            <figcaption>1st. Photo: John S. and James L. Knight Fundation, by Scott Henrichsen</figcaption>
+            <figcaption>2nd. Photo: Wikimedia, by Paul Clarke</figcaption>
+        </figure>
+        <article>
+            <section>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae numquam assumenda voluptates quod natus? Non commodi delectus ab error inventore, aliquam eligendi officia qui tempora ipsum. Cumque, aliquid! Veritatis, architecto. <mark>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, iusto pariatur!</mark> Corrupti doloremque hic veritatis molestiae possimus nam animi consectetur deleniti dignissimos dolorum, rerum fugit obcaecati harum at, sapiente ex?</p>
+            </section>
+
+        </article>
+
 
     </main>
 
