last part of the exercise

--- a/index.html
+++ b/index.html
@@ -28,7 +28,48 @@
             <figcaption>2nd. Photo: Wikimedia, by Paul Clarke</figcaption>
         </figure>
         <article>
-            <section>
+            <section id="firstpart">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae numquam assumenda voluptates quod natus? Non commodi delectus ab error inventore, aliquam eligendi officia qui tempora ipsum. Cumque, aliquid! Veritatis, architecto. <mark>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, iusto pariatur!</mark> Corrupti doloremque hic veritatis molestiae possimus nam animi consectetur deleniti dignissimos dolorum, rerum fugit obcaecati harum at, sapiente ex?</p>
+            </section>
+
+            <section id="listpart">
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, soluta! Dolor labore aspernatur nam mollitia magni necessitatibus sunt minus placeat consectetur vel repellendus ratione!</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, soluta! Dolor labore aspernatur nam mollitia magni necessitatibus sunt minus placeat consectetur vel repellendus ratione!</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, soluta! Dolor labore aspernatur nam mollitia magni necessitatibus sunt minus placeat consectetur vel repellendus ratione!</li>
+                </ul>
+            </section>
+
+            <section id="tablepart">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Lorem ipsum dolor </th>
+                            <th>Lorem ipsum dolor </th>
+                            <th>Lorem ipsum dolor </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="odd-line">
+                            <td>Lorem ipsum dolor </td>
+                            <td>Lorem ipsum dolor </td>
+                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem hic consectetur ipsa porro perspiciatis reprehenderit repellat sit quibusdam, harum eos!</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor </td>
+                            <td>Lorem ipsum dolor </td>
+                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem hic consectetur ipsa porro perspiciatis reprehenderit repellat sit quibusdam, harum eos!</td>
+                        </tr>
+                        <tr class="odd-line">
+                            <td>Lorem ipsum dolor </td>
+                            <td>Lorem ipsum dolor </td>
+                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem hic consectetur ipsa porro perspiciatis reprehenderit repellat sit quibusdam, harum eos!</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+
+            <section id="lastpart">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae numquam assumenda voluptates quod natus? Non commodi delectus ab error inventore, aliquam eligendi officia qui tempora ipsum. Cumque, aliquid! Veritatis, architecto. <mark>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, iusto pariatur!</mark> Corrupti doloremque hic veritatis molestiae possimus nam animi consectetur deleniti dignissimos dolorum, rerum fugit obcaecati harum at, sapiente ex?</p>
             </section>
 
