end of the exercise

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tim-Berners Lee</title>
 </head>
 <body>
     <header>
@@ -27,6 +27,7 @@
             <figcaption>1st. Photo: John S. and James L. Knight Fundation, by Scott Henrichsen</figcaption>
             <figcaption>2nd. Photo: Wikimedia, by Paul Clarke</figcaption>
         </figure>
+
         <article>
             <section id="firstpart">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae numquam assumenda voluptates quod natus? Non commodi delectus ab error inventore, aliquam eligendi officia qui tempora ipsum. Cumque, aliquid! Veritatis, architecto. <mark>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, iusto pariatur!</mark> Corrupti doloremque hic veritatis molestiae possimus nam animi consectetur deleniti dignissimos dolorum, rerum fugit obcaecati harum at, sapiente ex?</p>
@@ -69,13 +70,20 @@
                 </table>
             </section>
 
-            <section id="lastpart">
+            <section id="secondpart">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae numquam assumenda voluptates quod natus? Non commodi delectus ab error inventore, aliquam eligendi officia qui tempora ipsum. Cumque, aliquid! Veritatis, architecto. <mark>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, iusto pariatur!</mark> Corrupti doloremque hic veritatis molestiae possimus nam animi consectetur deleniti dignissimos dolorum, rerum fugit obcaecati harum at, sapiente ex?</p>
             </section>
 
+            <section id="otherinterest">
+                <h2>Potrebbe Interessarti</h2>
+                <div id="monitor">
+                    <h3>Lorem Ipsum</h3>
+                </div>
+                <div id="graph">
+                    <h3>Lorem Ipsum</h3>
+                </div>
+            </section>
         </article>
-
-
     </main>
 
     <footer>
