Fine esercizio ora tocca al BONUS ;)

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             </section>
         </article>
     </main>
-
+    <hr>
     <footer>
-
+        <p> Made whit passion and &hearts; by ME!</p>
     </footer>
     
 </body>
